[metadata]
name = yaml_where
version = attr: yaml_where.version.__version__
description = Source map for YAML files
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/sixty-north/yaml-where
author = Sixty North AS
author_email: systems+yaml-where@sixty-north.com
keywords = yaml source-map
license = MIT License
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[options]
zip_safe = True
include_package_data = False
package_dir =
    =source
packages = find:
install_requires = ruamel.yaml

[options.extras_require]
dev = bumpversion
doc = sphinx ; sphinx_rtd_theme ; better_apidoc
test = pytest ; coverage ; pytest-cov

[options.packages.find]
where = source
